--- a/hipserver/Server/Makefile.inc
+++ b/hipserver/Server/Makefile.inc
@@ -1,5 +1,5 @@
-#*************************************************************************************************
-# Copyright 2019-2021 FieldComm Group, Inc.
+#**************************************************************************
+# Copyright 2019-2024 FieldComm Group, Inc.
 # 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,8 +12,8 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-#*
-#********************************************************************
+# 
+#**************************************************************************
 
 #**********************************************************
 #*
@@ -33,7 +33,7 @@ COMMON_HFILES = $(DIR_COMN)/common.h      \
                 $(DIR_COMN)/hartdefs.h    \
                 $(DIR_APPC)/tpdll.h       \
                 $(DIR_APPC)/appmsg.h      \
-                $(DIR_SERVER)/hssyslogger.h      \
+                $(DIR_SRVR)/hssyslogger.h \
                 debug.h                   \
                 mutex2.h                  \
                 tooldef.h
